# RAT-retrieval-augmented-thinking

./: README.md  pyproject.toml  rat-claude.py  rat-groq.py  rat-msty.py
rat/: __init__.py  rat.py
